--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "services/hexagon"]
 	path = services/hexagon
 	url = https://github.com/hexis-revival/hexagon.git
+[submodule "services/hexagon-web"]
+	path = services/hexagon-web
+	url = https://github.com/hexis-revival/hexagon-web.git
