--- a/.github/workflows/submodule-sync.yml
+++ b/.github/workflows/submodule-sync.yml
@@ -10,6 +10,9 @@ jobs:
   sync:
     name: 'Submodules Sync'
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
 
     defaults:
       run:
@@ -28,5 +31,5 @@ jobs:
       run: |
         git config user.name 'github-actions[bot]'
         git config user.email 'github-actions[bot]@users.noreply.github.com'
-        git remote set-url origin https://x-access-token:${{ secrets.HEXIS_ACCESS_TOKEN }}@github.com/${{ github.repository }}
+        git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
         git commit -am "Fast-forward sub-modules" && git push || echo "No changes to commit"
