Add hexagon configuration

--- a/.example.env
+++ b/.example.env
@@ -8,3 +8,9 @@ POSTGRES_PORT=5432
 # Redis configuration
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
+
+# Hexagon configuration
+HNET_HOST=127.0.0.1
+HNET_PORT=21556
+HSCORE_HOST=127.0.0.1
+HSCORE_PORT=80
