--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - '127.0.0.1:${POSTGRES_PORT}:5432'
     volumes: 
-      - './.data/postgres:/var/lib/postgresql/data'
+      - postgres_data:/var/lib/postgresql/data
     networks:
       - hexis
     healthcheck:
@@ -41,7 +41,7 @@ services:
     networks:
       - hexis
     volumes: 
-      - './.data/redis:/usr/local/etc/redis'
+      - redis_data:/usr/local/etc/redis
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
@@ -77,3 +77,7 @@ services:
 networks:
   hexis:
     driver: bridge
+
+volumes:
+  postgres_data:
+  redis_data:
