Run git pull before making updates

--- a/.github/workflows/submodule-sync.yml
+++ b/.github/workflows/submodule-sync.yml
@@ -19,6 +19,10 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
+    - name: Git pull
+      run: |
+        git pull
+
     - name: Git submodule update
       run: |
         git update-index --cacheinfo 160000,$(git ls-remote https://github.com/hexis-revival/hexagon.git HEAD | awk '{ print $1}'),services/hexagon
